Fixed popup z-index and bottom margin

--- a/studionilo_website/home/static/home/nilo.css
+++ b/studionilo_website/home/static/home/nilo.css
@@ -59,7 +59,7 @@ body {
     background-color: #c6e8e9;
     display: flex;
     flex-direction: column;
-    z-index: 9;
+    z-index: 7;
 }
 
 .nilo-nav a {
@@ -586,16 +586,17 @@ a.nilo-email {
     background-color: white;
     width: 100%;
     height: 85vh;
-    margin-bottom: 10vh;
+    margin-bottom: 7vh;
     overflow: auto;
     padding: 4%;
     position: relative;
+    z-index: 9;
 }
 
 .nilo-popup-view {
     display: none;
     position: fixed;
-    z-index: 9;
+    z-index: 8;
 }
 
 .nilo-popup hr {
