--- a/studionilo_website/home/static/home/nilo_l.css
+++ b/studionilo_website/home/static/home/nilo_l.css
@@ -63,4 +63,7 @@
     .nilo-more-services {
         width: auto;
     }
+    .nilo-popup {
+        margin-bottom: 0vh;
+    }
 }
